--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.8",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.14"
